tests/rosetta/out/Smalltalk/averages-root-mean-square.out
/tmp/averages-root-mean-square.st:6: parse error, expected ']'
