tests/rosetta/out/Smalltalk/averages-root-mean-square.st
" Generated by Mochi compiler v0.10.30 on 2006-01-02T15:04:05Z
"
| sqrtApprox guess i n sum x rms |
sqrtApprox := [:x | guess := x.
i := 0.
[(i < 20)] whileTrue: [.
guess := (((guess + ((x / guess)))) / 2).
i := (i + 1).
].
.
guess. ].
n := 10.
sum := 0.
x := 1.
[(x <= n)] whileTrue: [.
sum := (sum + (((x asFloat) * (x asFloat)))).
x := (x + 1).
].
.
rms := sqrtApprox value: (sum / (n asFloat)).
Transcript show: ((rms asString)) printString; cr.
